--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "react/prop-types": "off",
+    "react/jsx-props-no-spreading": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/style-prop-object": "off",
