--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,8 @@
     "import/no-extraneous-dependencies": "off",
     "no-use-before-define": "off",
     "camelcase": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "consistent-return": "off"
   },
   "settings": {
     "import/resolver": {
